# my-rag-project

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  api.py  eval.py  generate.py  guardrails.py  ingest.py  mcp_server.py  models.py  pyproject.toml  query.py  test-jieba.py
